changes in trialuserController and public

--- a/views/emailTemplate.ejs
+++ b/views/emailTemplate.ejs
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <body>
     <div style="display:flex;justify-content:center; ">
         <div style="text-align:center;margin-top: 10px;">
-            <div
-                style="width:40rem;height:9rem;display:flex;justify-content: center;align-items: center;">
-                <div style=" margin-top: 2rem;">
+            <div style="width:40rem;height:9rem;display: grid;justify-content: center;align-items: center;">
+                <div style="margin-top: 2rem;">
                     <a href="https://dhudu.ae/">
-                        <img src="https://i.postimg.cc/9fz6SNYh/df1e4673-f305-4d60-9154-a2d8a2ad78ca-removebg-preview-1-1.png" width="300px"></a>
+                        <img src="https://i.postimg.cc/9fz6SNYh/df1e4673-f305-4d60-9154-a2d8a2ad78ca-removebg-preview-1-1.png"
+                            width="300px">
+                    </a>
                 </div>
             </div>
-            <div style=" display: grid;">
+            <div style=" display: grid">
                 <div style="width:40rem;display:flex;justify-content: center;align-items: center;">
                     <div>
                         <h2 style="font-weight:bold;"></h2>
-                        <p
-                            style="font-weight: bold;color: #8a8a8f; text-align:left;margin-bottom:40px ">
-                            Dear <%= userName %> </p>
-                        <p style="font-weight: bold;color: #8a8a8f;text-align:left;">Thank you for registering for our complimentary milk sample.</p>
-                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">We appreciate your interest in Dhudu and look forward to providing you with our milky goodness. </p>
-                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">We are committed to providing you with the highest quality of milk, straight from the farm to your doorstep. Keep an eye on your inbox; we'll be reaching out soon to lock in those milk delivery dates. </p>
-                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">Get ready for some moo-licious, real fresh milk coming your way! </p>
-                        <p style="font-weight: bold; color: #24a9e1;text-align:left;line-height: 10px;  ">Best regards, </p>
-                        <p style="font-weight: bold; color: #24a9e1;text-align:left;line-height: 10px;  ">Dhudu Team </p>
-
+                        <p style="font-weight: bold;color: #8a8a8f; text-align:left;margin-bottom:40px ">Dear <%=userName %></p>
+                        <p style="font-weight: bold;color: #8a8a8f;text-align:left;">Thank you for registering for our
+                            complimentary milk sample.</p>
+                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">We appreciate
+                            your interest in Dhudu and look forward to providing you with our milky goodness. </p>
+                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">We are
+                            committed to providing you with the highest quality of milk, straight from the farm to your
+                            doorstep. Keep an eye on your inbox; we'll be reaching out soon to lock in those milk
+                            delivery dates. </p>
+                        <p style="font-weight: bold; color: #8a8a8f;text-align:left;line-height: 20px;  ">Get ready for
+                            some moo-licious, real fresh milk coming your way! </p>
+                        <p style="font-weight: bold; color: #24a9e1;text-align:left;line-height: 10px;  ">Best regards,
+                        </p>
+                        <p style="font-weight: bold; color: #24a9e1;text-align:left;line-height: 10px;  ">Dhudu Team
+                        </p>
                         </p>
                         <div style="width:40rem; margin-top: 30px;display: flex;justify-content: center;">
                             <div>
                                 <div
                                     style="margin-left: 10rem; margin-right:10rem;font-weight: bold;color: black;font-size: 15px; color:white;padding: 11px 20px 11px 20px;">
                                 </div>
+                                <!-- <div
+                                                style="margin-left: 10rem; margin-right:10rem;font-weight: bold;margin-top: 20px;color: black;font-size: 15px; background-color:#193863; color:white;padding: 11px 20px 11px 20px;">
+                                                Password:  </div> -->
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- <p style="font-weight: bold;font-size:20px;margin-top:30px;">
+                                   Thank you ! 
+                                    <br />
+                                    Caratglitz Team
+                                </p> -->
+
             </div>
         </div>
     </div>
-    <div
-        style="margin-top:40px;width: 40rem; height:14rem; display: flex;  align-items: center; justify-content:center;margin: auto;">
+    <div style=" width: 40rem; height:14rem; display: grid;justify-content:center; text-align:center">
         <div>
-            <div style="display: flex; align-items: center; justify-content:center;margin-top: 10px;">
+            <div
+                style="display: flex; align-items: center; justify-content:center;margin-top: 10px;margin-left: 17rem;">
+                <!-- <a href="https://youtu.be/DPMa3u6V50c" target="_blank"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-iI0u-WOfXljpc_TMYPFowvBo6bLd4ap54pKtli27JwkGgNsLuGpEyNsgeKMdVMfnTTc&usqp=CAU"  width="40px" height="50px"style="margin-right:5px;"  alt="youtube logo red hd" /></a> -->
                 <a href="https://www.facebook.com/profile.php?id=61556917162556&mibextid=ZbWKwL" target="_blank"> <img
                         src="https://www.mmppicture.co.in/wp-content/uploads/2021/03/Facebook-Icon-PNG-1.png"
-                        width="50px" height="50px"></a>
+                        width="50px" height="50px"></img></a>
+                <!-- <a href="https://www.tiktok.com/@stageevent?lang=en" target="_blank"> <img
+                                                                    src="https://w7.pngwing.com/pngs/986/124/png-transparent-tiktok-social-media-logos-brands-icon-thumbnail.png"
+                                                                    width="45px" height="42px" style="margin:3px;border-radius:10px"></img></a> -->
+                <!-- <a href="https://twitter.com/Carat_Glitz" target="_blank">
+
+
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/twitter--v1.png"
+                        alt="twitter--v1" />
+                </a> -->
+
                 <a href="https://www.instagram.com/dhudu.ae?igsh=NHZyYXlhZm5mYnJl" target="_blank"> <img
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
-                        width="40px" height="37px" style="margin:6px;border-radius:0px">
+                        width="40px" height="37px" style="margin:6px;border-radius:0px"></img>
                 </a>
             </div>
-            <div style="margin-left: 20px;">
+            <div style="margin-left: -20px;">
                 <img src="https://i.postimg.cc/KjZtKmCt/trial-qr.png" width="94px" height="94px"
                     style="margin-left:18px;"></img>
             </div>
@@ -58,5 +85,7 @@
             </div>
         </div>
     </div>
+
 </body>
+
 </html>
